[package]
name = "evm-core"
version = "0.30.0"
license = "Apache-2.0"
authors = ["Sankar boro <sankar.boro@zeeve.io>"]
description = "Portable Ethereum Virtual Machine implementation written in pure Rust."
repository = "https://github.com/sorpaas/rust-evm"
keywords = ["no_std", "ethereum"]
edition = "2018"

[dependencies]
primitive-types = { version = "0.10", default-features = false }
codec = { git = "https://github.com/axia-tech/axia-scale-codec", package = "axia-scale-codec", default-features = false, features = ["derive", "full"], optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
# Work-around for https://github.com/myrrlyn/funty/issues/3
funty = { version = "=1.1", default-features = false }

[dev-dependencies]
hex = "0.4"

[features]
default = ["std"]
with-codec = ["codec", "primitive-types/impl-codec"]
with-serde = ["serde", "primitive-types/impl-serde"]
std = ["primitive-types/std", "codec/std", "serde/std", "funty/std"]
